prover-ray/zkcdriver/testdata/synced/invalid/basic_01.zkc
//error:2:12-13:variable already declared
fn f(x:u8, x:u8) -> (r:u8) {
  r = x
  return
}
